Fix typo in digest

--- a/src/templates/digest_v3.hbs
+++ b/src/templates/digest_v3.hbs
@@ -266,7 +266,7 @@
             <span title="{{feedback.tooltip_negative}}">
             <img class="feedback-chip-tiny feedback-chip-negative"
         src="{{base_url}}/keyboard_arrow_down_24dp_000000.png" alt="" width="10"
-                style="display:inline-block;"></span> e treine o algoritmo para te entregar as melhores noticias para você.
+                style="display:inline-block;"></span> e treine o algoritmo para entregar as melhores noticias para você.
         </div>
     </div>
     <div class="content">
